--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leblanc</title>
+	<title>Leblanc, the Deceiver</title>
 	<link rel="icon" href="https://vignette.wikia.nocookie.net/leagueoflegends/images/5/5d/LeBlanc_OriginalChargement.jpg/revision/latest/scale-to-width-down/340?cb=20121214092934&path-prefix=fr">
+	<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&family=Teko&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="CSS/champion.css">
 </head>
 <body>
 	<!-- header element -->
